@@ -6,8 +6,8 @@
     <property name="can_focus">False</property>
     <property name="border_width">6</property>
     <property name="title" translatable="yes">Variables</property>
-    <property name="default_width">1100</property>
-    <property name="default_height">800</property>
+    <property name="default_width">1000</property>
+    <property name="default_height">700</property>
     <property name="type_hint">dialog</property>
     <signal name="delete-event" handler="gtk_widget_hide" swapped="no"/>
     <child internal-child="vbox">
@@ -170,7 +170,7 @@
               </packing>
             </child>
             <child>
-              <object class="GtkPaned" id="hpaned1">
+              <object class="GtkPaned" id="variables_hpaned">
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="hexpand">True</property>
