@@ -1,3 +1,7 @@
+2017-02-26 Hanna Knutsson <hanna_k@fmgirl.com>
+
+	* Save the size of units, functions, variables and datasets windows and the positions of panels
+
 2017-02-23 Hanna Knutsson <hanna_k@fmgirl.com>
 
 	* Calculate text in spinbox and convert integer arguments to non-decimal input bases in input function dialog
